# FFmpegSample

./: .gitignore  README.md
HelloWorld/: README.md
HelloWorld/app/: CMakeLists.txt  build.gradle
HelloWorld/app/src/androidTest/java/com/eli/helloffmpeg/: ExampleInstrumentedTest.java
HelloWorld/app/src/main/: AndroidManifest.xml
HelloWorld/app/src/main/cpp/: native-lib.cpp
HelloWorld/app/src/main/java/com/eli/helloffmpeg/: MainActivity.java
HelloWorld/app/src/main/res/layout/: activity_main.xml
HelloWorld/app/src/test/java/com/eli/helloffmpeg/: ExampleUnitTest.java
HelloWorld/gradle/wrapper/: gradle-wrapper.properties
SwitchMp42YUV/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
SwitchMp42YUV/app/src/androidTest/java/com/eli/switchmp42yuv/: ExampleInstrumentedTest.java
SwitchMp42YUV/app/src/main/: AndroidManifest.xml
SwitchMp42YUV/app/src/main/cpp/: native-lib.cpp
SwitchMp42YUV/app/src/main/java/com/eli/switchmp42yuv/: MainActivity.java
SwitchMp42YUV/app/src/main/res/layout/: activity_main.xml
SwitchMp42YUV/app/src/main/res/values/: strings.xml
SwitchMp42YUV/app/src/test/java/com/eli/switchmp42yuv/: ExampleUnitTest.java
SwitchMp42YUV/gradle/wrapper/: gradle-wrapper.properties
